ensure the anchor nav doesn't appear over the footer

--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -104,6 +104,7 @@ $z-index: (
     sticky-nav-bar: 65,
     sticky-nav-bar-header: 66,
     header: 70,
+    footer: 71,
     nav-overlay: 75,
     nav: 80,
     header-gridlines: 90,
