allow project page titles to span two columns on large screens

--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -17,7 +17,7 @@
                         {% include "patterns/molecules/breadcrumb/breadcrumb.html" with breadcrumb=page.breadcrumb %}
                     </nav>
                     {% if page.title %}
-                        <div class="title-area__heading layout__span-two layout__start-one layout__@large-span-one">
+                        <div class="title-area__heading layout__span-two layout__start-one layout__@large-span-two">
                             <h1 class="heading heading--display-two">{{ page.title }}</h1>
                         </div>
                     {% endif %}
