--- a/rca/project_styleguide/templates/patterns/atoms/reset/reset.html
+++ b/rca/project_styleguide/templates/patterns/atoms/reset/reset.html
@@ -1,6 +1,6 @@
 <a class="reset{% if modifier %} reset--{{ modifier }}{% endif %}" href="{{ value.href }}" data-filters-reset>
     <svg class="reset__icon" width="14" height="14">
-        <use xlink:href="#reset" /> 
+        <use xlink:href="#reset" />
     </svg>
-    <span class="reset__label">{{ value.text }}</span>
+    <span class="reset__label">{% firstof button_text value.text %}</span>
 </a>
