don't show underline on pagination links on mobile

--- a/rca/static_src/sass/components/_pagination.scss
+++ b/rca/static_src/sass/components/_pagination.scss
@@ -30,6 +30,10 @@
         display: block;
         font-family: $font--primary;
         transition: color $cubic-transition;
+
+        &::after {
+            width: 0;
+        }
     }
 
     &__button {
