add a link to the contact block on the guide page if it exists

--- a/rca/project_styleguide/templates/patterns/molecules/anchor-nav/anchor-nav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/anchor-nav/anchor-nav.html
@@ -5,6 +5,9 @@
         {% for item in anchor_nav %}
           <li class="anchor-nav-item body body--two"><a class="anchor-nav-item__link" href="{{ item.link }}">{{ item.title }}</a></li>
         {% endfor %}
+        {% if show_contact_block %}
+          <li class="anchor-nav-item body body--two"><a class="anchor-nav-item__link" href="#contact">Ask a question</a></li>
+        {% endif %}
       </ul>
     </nav>
   </div>
