--- a/rca/project_styleguide/templates/patterns/atoms/reset/reset.html
+++ b/rca/project_styleguide/templates/patterns/atoms/reset/reset.html
@@ -2,5 +2,5 @@
     <svg class="reset__icon" width="14" height="14">
         <use xlink:href="#reset" />
     </svg>
-    <span class="reset__label">{% firstof button_text value.text %}</span>
+    <span class="reset__label">{% firstof reset_button_text value.text %}</span>
 </a>
