--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_listing.html
@@ -73,14 +73,42 @@
             </div>
 
             <section class="section bg bg--light">
+
                 {% if page.results %}
                     <div class="section__row section__row--first-small section__row--last-small grid">
                         <div class="results-total heading heading--four layout__start-one layout__span-two layout__@large-start-two">
-                            <p>Results here</p>
+                            <span class="results-total__type">Results</span>
+                            <span class="results-total__number">236</span>
                         </div>
                     </div>
                 {% endif %}
+
+                <div class="section__row {% if page.results %}section__row--last-small {% else %}section__row--first-small section__row--last-large{% endif %} grid">
+                    <div class="results {% if not page.results %}results--no-results{% endif %} layout__start-one layout__span-two layout__@large-start-two layout__@large-span-three">
+                        {% if page.results %}
+                            {% for item in page.results %}
+                                <div class="results__item layout__span-two layout__@medium-span-one">
+                                    {% include "patterns/molecules/card/card--staff.html" %}
+                                </div>
+                            {% endfor %}
+                        {% else %}
+                            <div class="layout__start-one layout__span-two">
+                                {% include "patterns/molecules/no-results/no-results.html" %}
+                            </div>
+                        {% endif %}
+                    </div>
+                </div>
+
+                {% if page.results %}
+                    <div class="section__row section__row--last grid">
+                        <div class="layout__span-two layout__@large-span-one layout__start-one layout__@large-start-three">
+                            {% include "patterns/molecules/pagination/pagination.html" %}
+                        </div>
+                    </div>
+                {% endif %}
+
             </section>
+
 
         </form>
 
