add results anchor

--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_listing.html
@@ -77,6 +77,7 @@
                 {% if page.results %}
                     <div class="section__row section__row--first-small section__row--last-small grid">
                         <div class="results-total heading heading--four layout__start-one layout__span-two layout__@large-start-two">
+                            <span class="results-total__anchor" id="results"></span>
                             <span class="results-total__type">Results</span>
                             <span class="results-total__number">236</span>
                         </div>
