ensure the in-page nav appears if it's the only item in the menu

--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
                 <div class="introduction grid">
-                    {% if anchor_nav %}
+                    {% if anchor_nav or page.contact_image %}
                         {% include "patterns/molecules/anchor-nav/anchor-nav.html" with anchor_nav=anchor_nav show_contact_block=page.contact_image  %}
                     {% endif %}
                     <div class="introduction__container">
