replicate new desktop functionality on mobile

--- a/rca/static_src/sass/components/_nav.scss
+++ b/rca/static_src/sass/components/_nav.scss
@@ -155,14 +155,12 @@
 
         &--primary,
         &--secondary {
-            @include media-query(large) {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
 
-                #{$root}__link {
-                    flex: 1;
-                }
+            #{$root}__link {
+                flex: 1;
             }
         }
     }
@@ -245,37 +243,25 @@
     }
 
     &__icon {
-        fill: $color--white;
         pointer-events: none;
+        fill: $color--white;
+        padding: 12px;
+        width: 40px;
+        height: 40px;
+        transition: fill $transition, opacity $transition;
 
-        @include media-query(large) {
-            display: none;
+        .is-active & {
+            opacity: 1;
         }
 
-        &--desktop {
-            display: none;
-            padding: 12px;
-            width: 40px;
-            height: 40px;
-            transition: fill $transition, opacity $transition;
-
-            @include media-query(large) {
-                display: block;
-            }
-
-            .is-active & {
-                opacity: 1;
-            }
-
-            .fade-icon & {
-                opacity: 0.3;
-            }
+        .fade-icon & {
+            opacity: 0.3;
         }
     }
 
     &__icon-container {
         &:hover {
-            #{$root}__icon--desktop {
+            #{$root}__icon {
                 opacity: 1;
                 fill: $color--tertiary;
             }
