--- a/rca/project_styleguide/templates/patterns/molecules/navigation/primarynav.html
+++ b/rca/project_styleguide/templates/patterns/molecules/navigation/primarynav.html
@@ -37,9 +37,6 @@
                                 {% if link.secondary_links %}data-menu-parent{% endif %}
                             >
                                 <span>{{ link.text }}</span>
-                                {% if link.secondary_links %}
-                                    <svg class="nav__icon" width="6" height="10"><use xlink:href="#chevron"></use></svg>
-                                {% endif %}
                             </a>
 
                             {# Desktop nav icon #}
@@ -47,12 +44,13 @@
                                 <a
                                     href="#"
                                     class="nav__icon-container"
+                                    data-drill-down
                                     data-nav-level="1"
                                     data-menu="{{ forloop.counter }}"
                                     data-menu-id={{ forloop.counter }}
                                     {% if link.secondary_links %}data-menu-parent{% endif %}
                                 >
-                                    <svg class="nav__icon nav__icon--desktop" width="15" height="15"><use xlink:href="#chevron"></use></svg>
+                                    <svg class="nav__icon" width="15" height="15"><use xlink:href="#chevron"></use></svg>
                                 </a>
                             {% endif %}
                         </li>
@@ -88,9 +86,6 @@
                                     {% if item.tertiary_links %}data-menu-parent{% endif %}
                                 >
                                     <span>{{ item.text }}</span>
-                                    {% if item.tertiary_links %}
-                                        <svg class="nav__icon" width="6" height="10"><use xlink:href="#chevron"></use></svg>
-                                    {% endif %}
                                 </a>
 
                                 {# Desktop nav icon #}
@@ -99,13 +94,14 @@
                                         href="#"
                                         class="nav__icon-container"
                                         data-menu-child
+                                        data-drill-down
                                         data-nav-level="2"
                                         data-parent-id="{{ forloop.parentloop.counter }}"
                                         data-menu-id="{{ forloop.parentloop.counter}}-{{ forloop.counter }}"
                                         data-menu="{{ forloop.parentloop.counter }}-{{ forloop.counter }}"
                                         {% if item.tertiary_links %}data-menu-parent{% endif %}
                                     >
-                                        <svg class="nav__icon nav__icon--desktop" width="15" height="15"><use xlink:href="#chevron"></use></svg>
+                                        <svg class="nav__icon" width="15" height="15"><use xlink:href="#chevron"></use></svg>
                                     </a>
                                 {% endif %}
                             </li>
