fix focus bug in ios causing menu to not display correctly

--- a/rca/static_src/sass/components/_nav.scss
+++ b/rca/static_src/sass/components/_nav.scss
@@ -88,10 +88,10 @@
 
     &--standout {
         margin-top: ($gutter * 5);
-        margin-bottom: ($gutter * 10);
+        padding-bottom: ($gutter * 10);
 
         @include media-query(large) {
-            margin-bottom: 0;
+            padding-bottom: 0;
         }
     }
 
