update no results text for staff listing

--- a/rca/project_styleguide/templates/patterns/molecules/no-results/no-results.html
+++ b/rca/project_styleguide/templates/patterns/molecules/no-results/no-results.html
@@ -1,7 +1,7 @@
 <div class="no-results">
     <div class="no-results__container">
         <h2 class="no-results__heading heading heading--four">We couldn’t find any matching results</h2>
-        <p class="no-results__info heading heading--five">Reset filters to start again or use the main site search to find what you’re looking for.</p>
+        <p class="no-results__info heading heading--five">Reset filters to start again or use the main site search to find {% if staff %} who {% else %} what {% endif %} you’re looking for.</p>
         <div class="no-results__action">
             {% include "patterns/atoms/reset/reset.html" with value=reset reset_button_text="Reset filters" modifier='primary' %}
         </div>
