tidy up the filters back button on mobile

--- a/rca/static_src/sass/components/_filter-tab-options.scss
+++ b/rca/static_src/sass/components/_filter-tab-options.scss
@@ -32,6 +32,9 @@
 
     &__back {
         margin-bottom: $gutter;
+        appearance: none;
+        background: transparent;
+        border: 0;
     }
 
     &__back-icon {
