--- a/rca/project_styleguide/templates/patterns/molecules/job-titles/job-titles.html
+++ b/rca/project_styleguide/templates/patterns/molecules/job-titles/job-titles.html
@@ -1,11 +1,15 @@
 <div class="job-titles">
-    {% for item in job_title %}
+    {% for key,role in job_title %}
         <ul class="job-titles__item">
-            {% for item in item.titles %}
-                <li class="job-titles__title">{{ item.label }}</li>
+            {% for item in role.items %}
+                <li class="job-titles__title">{{ item }}</li>
             {% endfor %}
                 <li class="job-titles__department">
-                    <a class="body body--two link link--tertiary" href="{{ item.link }}">{{ item.department }}</a>
+                {% if role.link %}
+                    <a class="body body--two link link--tertiary" href="{{ role.link }}">{{ key }}</a>
+                {% else %}
+                    <p class="body body--two link">{{ key }}</p>
+                {% endif %}
                 </li>
         </ul>
     {% endfor %}
