--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.html
@@ -152,6 +152,19 @@
                 </section>
             {% endif %}
 
+            {% if page.legacy_news_and_events %}
+                <section class="section {% if page.bottom_feature_image %}{% else %} section--start{% endif %} section--end bg bg--dark">
+                    <div class="section__container">
+                        <header class="section__header grid">
+                            <h3 class="section__heading section__heading--primary heading heading--two">What&#39;s happening at the RCA</h3>
+                        </header>
+                        <div class="section__content grid">
+                            {% include "patterns/organisms/news/news_api_content.html" with news=page.legacy_news_and_events %}
+                        </div>
+                    </div>
+                </section>
+            {% endif %}
+
             {% if page.contact_image %}
                 <section class="section bg bg--light">
                     <div class="section__notch section__notch--small-med-only">
