--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
@@ -201,6 +201,23 @@
                 </section>
             {% endif %}
 
+            {% if page.legacy_news_and_events %}
+                <section class="section section--end bg bg--dark">
+                    <div class="section__notch section__notch--top">
+                        <div class="section__notch-fill section__notch-fill--third-col"></div>
+                    </div>
+
+                    <div class="section__container">
+                        <header class="section__header grid">
+                            <h3 class="section__heading section__heading--primary heading heading--two">What&#39;s happening at the RCA</h3>
+                        </header>
+                        <div class="section__content grid">
+                            {% include "patterns/organisms/news/news_api_content.html" with news=page.legacy_news_and_events %}
+                        </div>
+                    </div>
+                </section>
+            {% endif %}
+
         </div>
 
     </div>
