ensure back button functionality is consistent on mobile

--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -53,7 +53,7 @@
             </section>
 
             <section class="filter-bar filter-bar--small bg bg--light" data-filter-bar-small>
-                <a class="filter-bar__link body body--two" href="#" data-filter-launcher>
+                <a class="filter-bar__link body body--two" href="#filters-active" data-filter-launcher>
                     <span class="filter-bar__label">Filters</span>
                     <svg width="12" height="8" class="filter-bar__icon" aria-hidden="true">
                         <use xlink:href="#arrow"></use>
