--- a/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/staff/staff_detail.html
@@ -137,8 +137,8 @@
             </section>
 
             <section class="section section--top-space bg bg--light">
-                {% if page.legacy_related_students %}
-                    {% include "patterns/organisms/student-listing/student-listing-api.html" with student_listing=page.legacy_related_students %}
+                {% if related_students %}
+                    {% include "patterns/organisms/student-listing/student-listing-api.html" with student_listing=related_students %}
                 {% endif %}
 
                 {% if page.related_links %}
