--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -50,6 +50,7 @@
 @import 'components/form';
 @import 'components/form-item';
 @import 'components/grid';
+@import 'components/guide-chapter-nav';
 @import 'components/heading';
 @import 'components/heading-with-text';
 @import 'components/hero';
