remove incorrect data attr

--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -43,7 +43,7 @@
 
         <div class="page__content">
             {% if anchor_nav %}
-                <section class="section section--opposite-notch bg bg--light guide-chapter-nav" data-filter-bar>
+                <section class="section section--opposite-notch bg bg--light guide-chapter-nav">
                     <div class="section__notch section__notch--opposite">
 
                         <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col">
