--- a/rca/static_src/sass/components/_guide-chapter-nav.scss
+++ b/rca/static_src/sass/components/_guide-chapter-nav.scss
@@ -10,6 +10,10 @@
     transform: translateY(-100%);
     padding: 10px 0;
 
+    @include media-query(large) {
+        display: none;
+    }
+
     .is-active & {
         transform: translateY(0%);
     }
