Introduce item.aria-label to control label on filter tab bar

--- a/rca/project_styleguide/templates/patterns/molecules/categories-tablist/categories-tablist.html
+++ b/rca/project_styleguide/templates/patterns/molecules/categories-tablist/categories-tablist.html
@@ -1,11 +1,11 @@
 {% comment %}
     if this component has {{ item.tab_title }}, it'll use the tabs.js setup
-    normal {{ item.title }} and is reserved for react programme finder component }} 
+    normal {{ item.title }} and is reserved for react programme finder component }}
 {% endcomment %}
-<nav class="categories-tablist {% if modifier %}categories-tablist--{{ modifier }}{% endif %} bg bg--light" aria-label="Filter programmes">
+<nav class="categories-tablist {% if modifier %}categories-tablist--{{ modifier }}{% endif %} bg bg--light" aria-label="{{ item.aria-label|default:'Filter results'">
     <h2 class="body body--two categories-tablist__heading">{{ value.title }}</h2>
     <div class="categories-tablist__options" role="tablist">
-        {% for item in value.items %} 
+        {% for item in value.items %}
             <a id="{% if item.tab_title %}tab-{{ item.tab_title|slugify }}{% else %}{{ forloop.counter }}-tab{% endif %}" href="{% if item.tab_title %}#{{ item.tab_title|slugify }}{% else %}{{ item.href }}{% endif %}" class="categories-tablist__tab {% if item.selected %}categories-tablist__tab--selected{% endif %} {% if item.tab_title %}js-tab-item{% endif %} body body--one" role="tab" aria-selected="{% if item.selected %}true{% else %}false{% endif %}" aria-controls="{% if item.tab_title %}{{ item.tab_title }}{% else %}{{ item.title }}{% endif %}" {% if item.tab_title %}data-tab="{{ item.tab_title|slugify }}"{% endif %} data-project-category>
                 {% if item.tab_title %}
                     <div class="categories-tablist__tab-label">
