--- a/rca/project_styleguide/templates/patterns/molecules/filter-tab-options/filter-tab-options.html
+++ b/rca/project_styleguide/templates/patterns/molecules/filter-tab-options/filter-tab-options.html
@@ -17,10 +17,10 @@
         {% endif %}
 
         <div class="filter-tab-options__content">
-            {% for filter_item in filter_options %}
+            {% for option in item.options %}
                 <div class="filter-tab-options__item layout__span-two">
-                    <input class="filter-tab-options__checkbox" type="checkbox" id="filter-{{ item.filter_name }}-{{ filter_item.id }}" name="{{ item.filter_name }}" value="{{ filter_item.id }}" {% if filter_item.active %}checked{% endif %} />
-                    <label class="filter-tab-options__link body body--one {% if filter_item.active %}selected{% endif %}" for="filter-{{ item.filter_name }}-{{ filter_item.id }}" data-filter-option>{{ filter_item.title }}</label>
+                    <input class="filter-tab-options__checkbox" type="checkbox" id="filter-{{ item.filter_name }}-{{ option.id }}" name="{{ item.filter_name }}" value="{{ option.id }}" {% if option.active %}checked{% endif %} />
+                    <label class="filter-tab-options__link body body--one {% if option.active %}selected{% endif %}" for="filter-{{ item.filter_name }}-{{ option.id }}" data-filter-option>{{ option.title }}</label>
                 </div>
             {% endfor %}
         </div>
@@ -32,7 +32,7 @@
             <button class="filter-tab-options__button link link--primary layout__start-two layout__span-one layout__@large-start-four" data-filter-submit>
                 <span class="link__label">Show results</span>
                 <svg width="12" height="8" class="link__icon link__icon--rotated" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
-            </button>            
+            </button>
         </div>
 
     </div>
