Template consistency improvements: - Consistently use 'results' as a context name for the current paginator page of results - Have the pagination template look for 'paginator_page' in the context (currently looking for 'subpages' - which only applied to the programme list - Filter options now use the key 'options' instead of 'items' or 'children'

--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -109,7 +109,7 @@
                 {% if results %}
                     <div class="section__row section__row--last grid">
                         <div class="layout__span-two layout__@large-span-one layout__start-one layout__@large-start-three">
-                            {% include "patterns/molecules/pagination/pagination.html" with subpages=results %}
+                            {% include "patterns/molecules/pagination/pagination.html" with paginator_page=results %}
                         </div>
                     </div>
                 {% endif %}
